# PipelineGuard

./: .gitignore  pyproject.toml
contracts/: ecommerce_price.yaml
docs/superpowers/plans/: 2026-05-22-phase0-foundation.md  2026-05-22-phase1-validation-engine.md
docs/superpowers/specs/: 2026-05-22-phase0-foundation-design.md  2026-05-22-phase1-validation-engine-design.md
src/pipelineguard/: __init__.py  _db.py  exceptions.py
src/pipelineguard/cli/: main.py
src/pipelineguard/contracts/: models.py  registry.py  versioning.py
src/pipelineguard/store/: __init__.py  observations.py
src/pipelineguard/validators/: __init__.py  base.py  engine.py  schema.py  statistical.py
tests/: conftest.py  test_cli.py  test_models.py  test_observations_store.py  test_registry.py  test_schema_validators.py  test_statistical_validators.py  test_validate_cli.py  test_validator_engine.py  test_versioning.py
