[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipelineguard"
version = "0.1.0"
description = "Lightweight, local-first ML pipeline data contract enforcement engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pg = "pipelineguard.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pipelineguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
